tests/NormalTests/paczka1/small_fuzzy/26190304.err
Error in line 3: o5lPQPvpc S431 27,7
Error in line 9: xaf74VwZAJ A385 81,6
